1.txt
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc: In member function ‘virtual void {anonymous}::RingBufferTest_MoveConstructor_Test::TestBody()’:
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:154:15: warning: unused variable ‘underlying_data’ [-Wunused-variable]
  154 |         auto *underlying_data = &rb1.get_container();
      |               ^~~~~~~~~~~~~~~
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc: In member function ‘virtual void {anonymous}::RingBufferTest_InsertMultiple_Test::TestBody()’:
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:358:18: error: no matching function for call to ‘fermat::RingBuffer<int>::assign(<brace-enclosed initializer list>)’
  358 |         rb.assign({1, 2, 3});
      |         ~~~~~~~~~^~~~~~~~~~~
In file included from /home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:15:
/home/jeff/github/kumose/fermat/fermat/container/ring_buffer.h:236:14: note: candidate: ‘template<class InputIterator> void fermat::RingBuffer<T, Container, Allocator>::assign(InputIterator, InputIterator) [with InputIterator = InputIterator; T = int; Container = fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > >; Allocator = fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> >]’
  236 |         void assign(InputIterator first, InputIterator last);
      |              ^~~~~~
/home/jeff/github/kumose/fermat/fermat/container/ring_buffer.h:236:14: note:   template argument deduction/substitution failed:
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:358:18: note:   candidate expects 2 arguments, 1 provided
  358 |         rb.assign({1, 2, 3});
      |         ~~~~~~~~~^~~~~~~~~~~
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc: In instantiation of ‘{anonymous}::VerifySequence<fermat::ring_buffer_iterator<int, int*, int&, fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > > >, const char*, int, int, int, int, int, int>(fermat::ring_buffer_iterator<int, int*, int&, fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > > >, fermat::ring_buffer_iterator<int, int*, int&, fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > > >, const char*, int, int, int, int, int, int)::<lambda(const auto:27&)> [with auto:27 = const char*]’:
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:92:15:   required from ‘bool {anonymous}::VerifySequence(Iter, Iter, Values ...) [with Iter = fermat::ring_buffer_iterator<int, int*, int&, fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > > >; Values = {const char*, int, int, int, int, int, int}]’
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:167:9:   required from here
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:86:41: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
   86 |             if (ok && it != last && *it == val) {
      |                                     ~~~~^~~~~~
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc: In instantiation of ‘{anonymous}::VerifySequence<fermat::ring_buffer_iterator<int, int*, int&, fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > > >, const char*, int, int, int, int, int>(fermat::ring_buffer_iterator<int, int*, int&, fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > > >, fermat::ring_buffer_iterator<int, int*, int&, fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > > >, const char*, int, int, int, int, int)::<lambda(const auto:27&)> [with auto:27 = const char*]’:
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:92:15:   required from ‘bool {anonymous}::VerifySequence(Iter, Iter, Values ...) [with Iter = fermat::ring_buffer_iterator<int, int*, int&, fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > > >; Values = {const char*, int, int, int, int, int}]’
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:190:9:   required from here
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:86:41: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
In file included from /home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:15:
/home/jeff/github/kumose/fermat/fermat/container/ring_buffer.h: In instantiation of ‘void fermat::RingBuffer<T, Container, Allocator>::insert(fermat::RingBuffer<T, Container, Allocator>::const_iterator, InputIterator, InputIterator) [with InputIterator = int; T = int; Container = fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > >; Allocator = fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> >; fermat::RingBuffer<T, Container, Allocator>::const_iterator = fermat::ring_buffer_iterator<int, const int*, const int&, fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > > >]’:
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:360:18:   required from here
/home/jeff/github/kumose/fermat/fermat/container/ring_buffer.h:1318:30: error: invalid type argument of unary ‘*’ (have ‘int’)
 1318 |             insert(position, *first);
      |                              ^~~~~~
/home/jeff/github/kumose/fermat/fermat/container/ring_buffer.h: In instantiation of ‘auto& fermat::Internal::GetFixedContainerCtorAllocator<Container, false>::operator()(Container&) [with Container = fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > >]’:
/home/jeff/github/kumose/fermat/fermat/container/ring_buffer.h:968:79:   required from ‘fermat::ContainerTemporary<Container, UseHeapTemporary>::ContainerTemporary(Container&) [with Container = fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > >; bool UseHeapTemporary = false]’
/home/jeff/github/kumose/fermat/fermat/container/ring_buffer.h:1094:43:   required from ‘void fermat::RingBuffer<T, Container, Allocator>::reserve(fermat::RingBuffer<T, Container, Allocator>::size_type) [with T = int; Container = fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > >; Allocator = fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> >; fermat::RingBuffer<T, Container, Allocator>::size_type = long unsigned int]’
/home/jeff/github/kumose/fermat/tests/container/ring_buffer_test.cc:210:19:   required from here
/home/jeff/github/kumose/fermat/fermat/container/ring_buffer.h:951:55: error: ‘class fermat::Vector<int, 0, fermat::TimesPolicy<2, 1>, fermat::AlignedAllocator<int, 0, fermat::TimesPolicy<2, 1>, fermat::TieredAllocator<int, 0> > >’ has no member named ‘get_allocator’; did you mean ‘do_allocate’?
  951 |             auto &operator()(Container &c) { return c.get_allocator(); }
      |                                                     ~~^~~~~~~~~~~~~
      |                                                     do_allocate
make[2]: *** [tests/container/CMakeFiles/con_ring_buffer_test.dir/build.make:79: tests/container/CMakeFiles/con_ring_buffer_test.dir/ring_buffer_test.cc.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:888: tests/container/CMakeFiles/con_ring_buffer_test.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
